--- a/assets/mega_collections.css
+++ b/assets/mega_collections.css
@@ -1,15 +1,125 @@
 
-.mega_collections {
-    display: flex;
-    height: max-content;
-    gap: 20px;
+.mega-collections-section {
+    background-color: #0d3135;
+    padding: 25px 0px;
 }
 
-.mega_collection_content {
+.mega_collections_wrapper {
+    max-width: 1400px;
+    border-radius: 10px;
+    width: 80%;
+    max-width: 1400px;
+}
+
+
+.mega_collections {
+    display: flex;
+    align-items: center;
+}
+
+.mega_collection {
+    height: max-content;
+}
+
+.mega-collection-content {
+    position: relative;
+    text-decoration: none;
+    height: 100%;
     width: 100%;
+    object-fit: cover;
 }
 
 .mega_image {
-    width: 100%;
     height: 100%;
+    width: 100%;
+    border-radius: 10px;
+    object-fit: cover;
+    transition: transform 300ms ease-in-out;
+    display: block;
+    position: relative;
+}
+
+.mega_collection:hover .mega_image {
+    transform: scale(0.98);
+}
+
+.mega_collection:hover .mega_title {
+    transform: translateX(-5px);
+    transform: translateY(-3px);
+}
+
+
+.mega_title {
+    font-size: 18px;
+    font-weight: 600;
+    margin: 0;
+    color: rgb(17, 17, 17);
+    z-index: 3;
+    position: absolute;
+    bottom: 15px;
+    right: 10px;
+    transform: translateX(0px);
+    transform: translateY(0px);
+    transition: 300ms ease-in-out;
+}
+
+
+
+/* Responsive Design */
+@media (max-width: 1023px) {
+
+    .mega_image {
+        height: 240px;
+    }
+
+    .mega_title {
+        font-size: 18px;
+    }
+
+    .content-overlay {
+        padding: 20px;
+    }
+}
+
+@media (max-width: 639px) {
+    .mega-collections-section {
+        padding: 40px 0;
+    }
+
+
+    .mega_image {
+        height: 200px;
+    }
+
+    .mega_title {
+        font-size: 16px;
+    }
+
+    .content-overlay {
+        padding: 16px;
+    }
+
+    .mega_collections_wrapper .swiper-button-next,
+    .mega_collections_wrapper .swiper-button-prev {
+        width: 36px !important;
+        height: 36px !important;
+        margin-top: -18px;
+    }
+
+    .mega_collections_wrapper .swiper-button-next:after,
+    .mega_collections_wrapper .swiper-button-prev:after {
+        font-size: 14px !important;
+    }
+}
+
+
+@media (max-width: 450px) {
+    .mega_collections_wrapper {
+        width: 100%;
+        border-radius: 0px;
+    }
+
+    .mega_collections {
+        justify-content: flex-start;
+    }
 }
