--- a/sections/featured-collection.liquid
+++ b/sections/featured-collection.liquid
@@ -12,8 +12,8 @@
     <!-- Swiper Container -->
     <div class="swiper featured-collection-swiper">
       <div class="swiper-wrapper">
-        {% for product in collections[section.settings.featured_collection].products limit: 15 %}
-          <div class="swiper-slide">
+        {% for product in collections[section.settings.featured_collection].products limit: 16 %}
+          <div class="swiper-slide product_card_container">
             <div class="product-card">
               <div class="product-image">
                 <a href="{{ product.url }}">
@@ -71,14 +71,15 @@ document.addEventListener("DOMContentLoaded", function () {
   // Swiper
   new Swiper(".featured-collection-swiper", {
     loop: true,
-    slidesPerView: 1.2,
+    slidesPerView: 5,
     spaceBetween: 15,
     slidesPerGroup: 3,
     breakpoints: {
-      10: { slidesPerView: 1.8, slidesPerGroup: 1 },
-      450: { slidesPerView: 2, slidesPerGroup: 1 },
-      768: { slidesPerView: 4, slidesPerGroup: 3 },
-      1024: { slidesPerView: 5, slidesPerGroup: 3 }
+      10: { slidesPerView: 1.9, slidesPerGroup: 1, centeredSlides: true },
+      450: { slidesPerView: 2, slidesPerGroup: 1, centeredSlides: true },
+      768: { slidesPerView: 3, slidesPerGroup: 1 },
+      1024: { slidesPerView: 4, slidesPerGroup: 2 },
+      1200: { slidesPerView: 5, slidesPerGroup: 2 }
     },
     navigation: {
       nextEl: ".swiper-button-next",
