--- a/sections/mega_collections.liquid
+++ b/sections/mega_collections.liquid
@@ -40,6 +40,9 @@ document.addEventListener("DOMContentLoaded", function () {
       disableOnInteraction: false
     },
     grabCursor: true,
+    freeMode: false,
+    touchRatio: 0.5,
+    threshold: 5,
   });
 });
 
