--- a/sections/custom-banner.liquid
+++ b/sections/custom-banner.liquid
@@ -57,6 +57,10 @@ document.addEventListener("DOMContentLoaded", function () {
       el: '.custom-banner-pagination',
       clickable: true,
     },
+    freeMode: false,
+    grabCursor: true,
+    touchRatio: 0.5,
+    threshold: 5,
   });
 });
 
