--- a/sections/featured-collection.liquid
+++ b/sections/featured-collection.liquid
@@ -74,7 +74,7 @@ document.addEventListener("DOMContentLoaded", function () {
     slidesPerView: 5,
     spaceBetween: 15,
     slidesPerGroup: 2,
-    speed: 200,
+    speed: 400,
     autoplay: {
       delay: 2500, 
       disableOnInteraction: false
@@ -84,8 +84,8 @@ document.addEventListener("DOMContentLoaded", function () {
     touchRatio: 1,
     threshold: 5,
     breakpoints: {
-      10: { slidesPerView: 1.9, slidesPerGroup: 1, centeredSlides: true },
-      450: { slidesPerView: 2, slidesPerGroup: 1, centeredSlides: true },
+      10: { slidesPerView: 1.9, slidesPerGroup: 1, centeredSlides: true, speed: 200 },
+      450: { slidesPerView: 2, slidesPerGroup: 1, centeredSlides: true, speed: 200 },
       768: { slidesPerView: 3, slidesPerGroup: 1 },
       1024: { slidesPerView: 4, slidesPerGroup: 2 },
       1200: { slidesPerView: 5, slidesPerGroup: 2 }
