--- a/sections/mega_collections.liquid
+++ b/sections/mega_collections.liquid
@@ -29,8 +29,8 @@ document.addEventListener("DOMContentLoaded", function () {
     loop: true,
     speed: 200,
     breakpoints: {
-      10: { slidesPerView: 1.8, slidesPerGroup: 1, centeredSlides: true, },
-      450: { slidesPerView: 1.8, slidesPerGroup: 1, centeredSlides: true, },
+      10: { slidesPerView: 1.8, slidesPerGroup: 1, centeredSlides: true, speed: 200 },
+      450: { slidesPerView: 1.8, slidesPerGroup: 1, centeredSlides: true, speed: 200 },
       768: { slidesPerView: 3, slidesPerGroup: 1 },
       1024: { slidesPerView: 4, slidesPerGroup: 1 },
       1200: { slidesPerView: 5, slidesPerGroup: 1 },
