--- a/sections/featured-collection.liquid
+++ b/sections/featured-collection.liquid
@@ -3,7 +3,7 @@
 <section class="featured-collection-wrapper">
 
   <div class="featured-collection">
-    <div class="collection-image">
+    <div class="collection-header">
       <a href="{{ section.settings.featured_collection.url }}" class="collection-name-link">
         <p class="collection-name">{{ section.settings.featured_collection.title }}</p>
       </a>
@@ -62,6 +62,12 @@
       <div class="swiper-button-prev"></div>
       <div class="swiper-button-next"></div>
     </div>
+    <div class="show_more_container">
+        <a class="collection_button_icon_container" href="{{ section.settings.featured_collection.url }}">
+          <button class="show_more_button">مشاهدة المزيد</button>
+          <img class="arrow-icon" height="90%" width="auto" src="{{ 'arrow_left.svg' |  asset_url }}" alt="">
+        </a>
+    </div>
   </div>
 </section>
 
@@ -88,7 +94,7 @@ document.addEventListener("DOMContentLoaded", function () {
       450: { slidesPerView: 2, slidesPerGroup: 1, centeredSlides: true, speed: 200 },
       768: { slidesPerView: 3, slidesPerGroup: 1 },
       1024: { slidesPerView: 4, slidesPerGroup: 2 },
-      1200: { slidesPerView: 5, slidesPerGroup: 2 }
+      1300: { slidesPerView: 5, slidesPerGroup: 2 }
     },
     navigation: {
       nextEl: ".swiper-button-next",
